Added info and link

--- a/Entregable1/index.html
+++ b/Entregable1/index.html
@@ -1,1 +1,22 @@
-<H1>Grupo 4</H1>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Grupo 4</title>
+  </head>
+  <body>
+    <H1>Tecnicatura en Desarrollo de Aplicaciones Informáticas (TUDAI)</H1>
+    <H2>Interfaces de Usuario e Interacción</H2>
+    <H3>Entregable Practico 1</H3>
+    <H4>Grupo 4</H4>
+    <p>Integrantes:</p>
+    <ul>
+      <li>Perez, Franco Gabriel</li>
+      <li>Marchiori, Ruben Horacio</li>
+    </ul>
+    <a href=""> Figma </a>
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FhoxbrpxsLL1SUCvRDgMACC%2FEntregable-1%3Fnode-id%3D10%253A2" allowfullscreen></iframe>
+  </body>
+</html>
