agregado link a prototipo

--- a/Entregable1/index.html
+++ b/Entregable1/index.html
@@ -17,6 +17,7 @@
       <li>Marchiori, Ruben Horacio</li>
     </ul>
     <H4><a href="https://www.figma.com/file/hoxbrpxsLL1SUCvRDgMACC/Entregable-1"> Link a proyecto en Figma </a></H4>
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FhoxbrpxsLL1SUCvRDgMACC%2FEntregable-1%3Fnode-id%3D27%253A30%26scaling%3Dmin-zoom%26page-id%3D1%253A3%26starting-point-node-id%3D27%253A30" allowfullscreen></iframe>
+    <H4><a href="https://www.figma.com/proto/hoxbrpxsLL1SUCvRDgMACC/Entregable-1?node-id=27%3A30&scaling=min-zoom&page-id=1%3A3&starting-point-node-id=27%3A30"> Link a prototipo en Figma </a></H4>
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1366" height="768" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FhoxbrpxsLL1SUCvRDgMACC%2FEntregable-1%3Fnode-id%3D27%253A30%26scaling%3Dmin-zoom%26page-id%3D1%253A3%26starting-point-node-id%3D27%253A30" allowfullscreen></iframe>
   </body>
 </html>
