links como botones

--- a/Entregable1/index.html
+++ b/Entregable1/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Grupo 4</title>
-  </head>
-  <body>
-    <H1>Tecnicatura en Desarrollo de Aplicaciones Informáticas (TUDAI)</H1>
-    <H2>Interfaces de Usuario e Interacción</H2>
-    <H3>Entregable Practico 1</H3>
-    <H4>Grupo 4</H4>
-    <p>Integrantes:</p>
-    <ul>
-      <li>Perez, Franco Gabriel</li>
-      <li>Marchiori, Ruben Horacio</li>
-    </ul>
-    <H4><a href="https://www.figma.com/file/hoxbrpxsLL1SUCvRDgMACC/Entregable-1"> Link a proyecto en Figma </a></H4>
-    <H4><a href="https://www.figma.com/file/hoxbrpxsLL1SUCvRDgMACC/Entregable-1?node-id=1%3A3"> Link a protoripo en Figma </a></H4>  
-    <H4><a href="https://www.figma.com/proto/hoxbrpxsLL1SUCvRDgMACC/Entregable-1?node-id=27%3A30&scaling=min-zoom&page-id=1%3A3&starting-point-node-id=27%3A30"> Link a prototipo en modo presentacion</a></H4>
-    
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1366" height="768" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FhoxbrpxsLL1SUCvRDgMACC%2FEntregable-1%3Fnode-id%3D27%253A30%26scaling%3Dmin-zoom%26page-id%3D1%253A3%26starting-point-node-id%3D27%253A30" allowfullscreen></iframe>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Grupo 4</title>
+		<style type="text/css">
+			/* Light mode */
+			:root {
+			   --body-bg: #FFFFFF;
+			   --body-color: #000000;
+			}
+
+			/* Dark mode */
+			@media (prefers-color-scheme: dark) {
+			   :root {
+				   --body-bg: #17034A;
+				   --body-color: #F1F1F1;
+			   }
+			}
+			body {
+				background: var(--body-bg);
+				color: var(--body-color);
+			}
+		</style>
+	</head>
+	<body>
+		<H1 style="text-align: center;">Tecnicatura en Desarrollo de Aplicaciones Informáticas (TUDAI)</H1>
+		<H2>Interfaces de Usuario e Interacción</H2>
+		<H3>Entregable Practico 1</H3>
+		<H4>Grupo 4</H4>
+		<p>Integrantes:</p>
+		<ul>
+			<li>Perez, Franco Gabriel</li>
+			<li>Marchiori, Ruben Horacio</li>
+		</ul>
+		<H4><a href="https://www.figma.com/file/hoxbrpxsLL1SUCvRDgMACC/Entregable-1"> Proyecto en Figma </a></H4>
+		<a href="https://www.figma.com/proto/hoxbrpxsLL1SUCvRDgMACC/Entregable-1?node-id=27%3A30&scaling=min-zoom&page-id=1%3A3&starting-point-node-id=27%3A30"> <button type="button">Modo presentacion</button></a>
+		<a href="https://www.figma.com/file/hoxbrpxsLL1SUCvRDgMACC/Entregable-1?node-id=1%3A3"> <button type="button">Modo editable</button></a>
+		<p></p>
+		<p>Previsualizacion interactiva:</p>
+		<p></p>
+		<iframe style="width: 100%" width="1366" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FhoxbrpxsLL1SUCvRDgMACC%2FEntregable-1%3Fnode-id%3D27%253A30%26scaling%3Dmin-zoom%26page-id%3D1%253A3%26starting-point-node-id%3D27%253A30" allowfullscreen></iframe>
+	</body>
 </html>
