Se agregan distintos tipos de estilos para textos.

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -9,7 +9,19 @@
     <title>WASD Games</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="header-container">
+            <h1>PRUEBA H1</h1>
+            <h2>PRUEBA H2</h2>
+            <h3>PRUEBA H3</h3>
+            <a>PRUEBA a</a>
+            <a class="bold">PRUEBA a bold</a>
+            <a class="italic-bold">PRUEBA a italic bold</a>
+            <a class="pay-card">PRUEBA h3 pay card</a>
+            <a class="text-hero-title">PRUEBA TITULO HERO</a>
+            <a class="text-hero-section">PRUEBA TEXTO HERO Section</a>
+        </div>
+    </header>
     <footer></footer>
 </body>
 </html>
