Se mejora codigo JS de carrusel y algunos detalles de estilo.

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -67,14 +67,14 @@
       </section> 
     </header>
     <div class="contenedor">
-      <section class="carruseles-categorias-recomendado">
+      <section class="carruseles-categorias-recomendado" >
         <div class="carrusel-categorias ">
           <div class="contenedor-titulo-controles">
             <h3>Recomendados</h3>
             <div class="indicadores-recomendado"></div>
           </div>
-          <div class="contenedor-principal">
-            <button role="button" id="flecha-izq-recomendado" class="flecha-izq" >❮</button>
+          <div class="contenedor-principal" id="recomendado">
+            <button role="button" id="flecha-carrusel" class="flecha-izq" >❮</button>
             <div class="contenedor-carrusel-recomendado">
               <ul class="carrusel">
                 <li class="juego-recomendado">
@@ -235,18 +235,18 @@
                 </li>
               </ul>
             </div>           
-            <button role="button" id="flecha-der-recomendado" class="flecha-der">❯</i></button>
+            <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
           </div>
         </div>
       </section>
-      <section class="carruseles-categorias-accion">
+      <section class="carruseles-categorias-accion" >
           <div class="carrusel-categorias ">
             <div class="contenedor-titulo-controles">
               <h3>Accion</h3>
               <div class="indicadores-accion"></div>
             </div>
-            <div class="contenedor-principal">
-              <button role="button" id="flecha-izq-accion" class="flecha-izq">❮</button>
+            <div class="contenedor-principal" id="accion">
+              <button role="button" id="flecha-carrusel" class="flecha-izq">❮</button>
               <div class="contenedor-carrusel-accion">
                 <ul class="carrusel">
                   <li class="juego-accion">
@@ -407,18 +407,18 @@
                   </li>
                 </ul>
               </div>           
-              <button role="button" id="flecha-der-accion" class="flecha-der">❯</i></button>
+              <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
             </div>
           </div>
       </section>
-      <section class="carruseles-categorias-multijugador">
+      <section class="carruseles-categorias-multijugador" >
         <div class="carrusel-categorias ">
           <div class="contenedor-titulo-controles">
             <h3>Multijugador</h3>
             <div class="indicadores-multijugador"></div>
           </div>
-          <div class="contenedor-principal">
-            <button role="button" id="flecha-izq-multijugador" class="flecha-izq">❮</button>
+          <div class="contenedor-principal" id="multijugador">
+            <button role="button" id="flecha-carrusel" class="flecha-izq">❮</button>
             <div class="contenedor-carrusel-multijugador">
               <ul class="carrusel">
                 <li class="juego-multijugador">
@@ -579,18 +579,18 @@
                 </li>
               </ul>
             </div>           
-            <button role="button" id="flecha-der-multijugador" class="flecha-der">❯</i></button>
+            <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
           </div>
         </div>
       </section>
-      <section class="carruseles-categorias-deportes">
+      <section class="carruseles-categorias-deportes" >
         <div class="carrusel-categorias">
           <div class="contenedor-titulo-controles">
             <h3>Deportes y carreras</h3>
             <div class="indicadores-deportes"></div>
           </div>
-          <div class="contenedor-principal">
-            <button role="button" id="flecha-izq-deportes" class="flecha-izq">❮</button>
+          <div class="contenedor-principal" id="deportes">
+            <button role="button" id="flecha-carrusel" class="flecha-izq">❮</button>
             <div class="contenedor-carrusel-deportes">
               <ul class="carrusel">
                 <li class="juego-deportes">
@@ -751,7 +751,7 @@
                 </li>
               </ul>
             </div>           
-            <button role="button" id="flecha-der-deportes" class="flecha-der">❯</i></button>
+            <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
           </div>
         </div>
       </section>
