Se mejora codigo de carrusel en funcion paginacion.

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -67,7 +67,7 @@
       </section> 
     </header>
     <div class="contenedor">
-      <section class="carruseles-categorias-recomendado" >
+      <section class="carruseles-categorias-recomendado" id="contenedor-categoria" name="recomendado">
         <div class="carrusel-categorias ">
           <div class="contenedor-titulo-controles">
             <h3>Recomendados</h3>
@@ -239,7 +239,7 @@
           </div>
         </div>
       </section>
-      <section class="carruseles-categorias-accion" >
+      <section class="carruseles-categorias-accion" id="contenedor-categoria" name="accion">
           <div class="carrusel-categorias ">
             <div class="contenedor-titulo-controles">
               <h3>Accion</h3>
@@ -411,7 +411,7 @@
             </div>
           </div>
       </section>
-      <section class="carruseles-categorias-multijugador" >
+      <section class="carruseles-categorias-multijugador" id="contenedor-categoria" name="multijugador">
         <div class="carrusel-categorias ">
           <div class="contenedor-titulo-controles">
             <h3>Multijugador</h3>
@@ -583,7 +583,7 @@
           </div>
         </div>
       </section>
-      <section class="carruseles-categorias-deportes" >
+      <section class="carruseles-categorias-deportes" id="contenedor-categoria" name="deporte">
         <div class="carrusel-categorias">
           <div class="contenedor-titulo-controles">
             <h3>Deportes y carreras</h3>
