--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -67,9 +67,9 @@
           </nav>
       </section> 
     </header>
-    <div class="contenedor">
-      <section class="carruseles-categorias-recomendado" id="contenedor-categoria" name="recomendado">
-        <div class="carrusel-categorias ">
+    <div class="contenedor"> <!-- usar el tag main en vez del div generico -->
+      <section class="carruseles-categorias-recomendado" id="contenedor-categoria" name="recomendado"> <!-- el id se repite, si lo usamos mas de una vez, que sea clase -->
+        <div class="carrusel-categorias "> <!-- este div me parece que sobra -->
           <div class="contenedor-titulo-controles">
             <h3>Recomendados</h3>
             <div class="indicadores-recomendado"></div>
@@ -240,7 +240,7 @@
           </div>
         </div>
       </section>
-      <section class="carruseles-categorias-accion" id="contenedor-categoria" name="accion">
+      <section class="carruseles-categorias-accion" id="contenedor-categoria" name="accion"><!-- conceptualmete los name= se usan con forms creo, me parece que es mas correcto usar un id -->
           <div class="carrusel-categorias ">
             <div class="contenedor-titulo-controles">
               <h3>Accion</h3>
