Se da forma al footer.

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -758,7 +758,52 @@
       </section>
     </div>
     <footer class="footer">
-      <h1>FOOTER</h1>
+        <div class="contenedor-ppal-footer">
+          <div class="cont-categorias">
+            <h3>Categorias</h3>
+            <ul>
+              <li>Accion</li>
+              <li>Aventuras & RPG</li>
+              <li>Clasicos</li>
+              <li>Deportes & Carreras</li>
+              <li>Estrategia & Defensa</li>
+              <li>Multijugador</li>
+              <li>Novedades</li>
+            </ul>
+          </div>
+          <div class="cont-micuenta">
+            <h3>Mi cuenta</h3>
+            <ul>
+              <li>Perfil</li>
+              <li>Biblioteca</li>
+              <li>Amigos</li>
+              <li>Cerrar sesion</li>
+            </ul>
+          </div>
+          <div class="cont-datos-wasd">
+            <h3>WASD Games</h3>
+            <ul>
+              <li>Politica de privacidad</li>
+              <li>Contacto</li>
+              <li>Licencias</li>
+              <li>Nuestro equipo</em></li>
+            </ul>
+          </div>
+          <div class="cont-redes">
+            <div class="logos-redes">
+              <h3>¡Seguinos!</h3>
+              <div class="icons-redes-footer">
+                <div class="icons-redes-facebook"><img src="./img/icons/🦆 icon _Facebook Square_.png" alt="Icono Facebook"></div>
+                <div class="icons-redes-instagram"><img src="./img/icons/🦆 icon _Instagram Square_.png" alt="Icono Instagram"></div>
+                <div class="icons-redes-tweeter"><img src="./img/icons/🦆 icon _Twitter Square_.png" alt="Icono Tweeter"></div>
+              </div>
+            </div>
+            <div class="input-buscar">
+              <input class="input-box-buscar" type="text" placeholder="Buscar en el sitio">
+              <img src="./img/icons/busqueda.svg" alt="Buscar" class="input-icon">
+            </div>
+          </div>
+        </div>
     </footer>
     <script src="./js/movimientoCarrusel.js"></script>    
 </body>
