--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -75,7 +75,7 @@
             <div class="indicadores-recomendado"></div>
           </div>
           <div class="contenedor-principal" id="recomendado">
-            <button role="button" id="flecha-carrusel" class="flecha-izq" >❮</button>
+            <button role="button" class="flecha-izq flecha-carrusel" >❮</button>
             <div class="contenedor-carrusel-recomendado">
               <ul class="carrusel">
                 <li class="juego-recomendado">
@@ -236,7 +236,7 @@
                 </li>
               </ul>
             </div>           
-            <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
+            <button role="button" class="flecha-der flecha-carrusel">❯</i></button>
           </div>
         </div>
       </section>
@@ -247,7 +247,7 @@
               <div class="indicadores-accion"></div>
             </div>
             <div class="contenedor-principal" id="accion">
-              <button role="button" id="flecha-carrusel" class="flecha-izq">❮</button>
+              <button role="button" class="flecha-izq flecha-carrusel">❮</button>
               <div class="contenedor-carrusel-accion">
                 <ul class="carrusel">
                   <li class="juego-accion">
@@ -408,7 +408,7 @@
                   </li>
                 </ul>
               </div>           
-              <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
+              <button role="button" class="flecha-der flecha-carrusel">❯</i></button>
             </div>
           </div>
       </section>
@@ -419,7 +419,7 @@
             <div class="indicadores-multijugador"></div>
           </div>
           <div class="contenedor-principal" id="multijugador">
-            <button role="button" id="flecha-carrusel" class="flecha-izq">❮</button>
+            <button role="button" class="flecha-izq flecha-carrusel">❮</button>
             <div class="contenedor-carrusel-multijugador">
               <ul class="carrusel">
                 <li class="juego-multijugador">
@@ -580,7 +580,7 @@
                 </li>
               </ul>
             </div>           
-            <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
+            <button role="button" class="flecha-der flecha-carrusel">❯</i></button>
           </div>
         </div>
       </section>
@@ -591,7 +591,7 @@
             <div class="indicadores-deportes"></div>
           </div>
           <div class="contenedor-principal" id="deportes">
-            <button role="button" id="flecha-carrusel" class="flecha-izq">❮</button>
+            <button role="button" class="flecha-izq flecha-carrusel">❮</button>
             <div class="contenedor-carrusel-deportes">
               <ul class="carrusel">
                 <li class="juego-deportes">
@@ -752,7 +752,7 @@
                 </li>
               </ul>
             </div>           
-            <button role="button" id="flecha-carrusel" class="flecha-der">❯</i></button>
+            <button role="button" class="flecha-der flecha-carrusel">❯</i></button>
           </div>
         </div>
       </section>
