intento de header

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -800,7 +800,7 @@
             </div>
             <div class="input-buscar">
               <input class="input-box-buscar" type="text" placeholder="Buscar en el sitio">
-              <img src="./img/icons/busqueda.svg" alt="Buscar" class="input-icon">
+              <img src="./img/icons/Icon-Lupa.svg" alt="Buscar" class="input-icon">
             </div>
           </div>
         </div>
