Agregada paleta de colores

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -81,7 +81,7 @@
                 <li class="juego-recomendado">
                   <div class="contenedor-card-big">        
                     <div class="card-big">
-                        <div class="img-juego-big"><img src="../img/DanMan.png" alt="Dan Man, juego de accion."></div>
+                        <div class="img-juego-big"><img src="./img/DanMan.png" alt="Dan Man, juego de accion."></div>
                         <div class="datos-juego-big">
                             <div class="titulo-big-card"><h3>Dan Man</h3></div>                
                             <div class="contenido-big-card"><p>Salta y da patadas por doquier.</p></div>
