--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -15,44 +15,45 @@
       <section class="container-nav-bar">
         <nav class="bar-nav">     
             <div>
-              <img src="./img/logo.png" alt="logo WASD games" class="logo">
+              <img src="./img/icons/Img-Logo.svg" alt="logo WASD games" class="logo">
             </div>          
             <input type="checkbox" id="check">
             <label for="check" class="bar-btn"> ☰ </label>
             <ul class="nav-menu">
               <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed">Show</label>
+                <label for="check-menu-deployed"><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Home.svg" alt="home button"></div><h3>Home</h3></div></label>
                   <ul class="nav-menu-deployed">
-                    <li><a href="#" class="nav-menu-deployed">Link 5</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 6</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 7</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 8</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Accion</a></li>
+                    <li><a href="#">Aventura & RPG</a></li>
+                    <li><a href="#">Clasicos</a></li>
+                    <li><a href="#">Deportes & Carreras</a></li>
+                    <li><a href="#">Estrategia & Defensa</a></li>
+                    <li><a href="#">Multijugador</a></li>
+                    <li><a href="#" class="featured">Novedades</a></li>
                   </ul>
               </li>
               <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" >Show1</label>
-                  <ul class="nav-menu-deployed">
-                    <li><a href="#" class="nav-menu-deployed">Link 5</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 6</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 7</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 8</a></li>
-                  </ul></li>
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div></label>
+              </li>
               <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" >Show2</label>
-                  <ul class="nav-menu-deployed">
-                    <li><a href="#" class="nav-menu-deployed">Link 5</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 6</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 7</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 8</a></li>
-                  </ul></li>
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Aventura.svg" alt="Aventura & RPG button"></div><h3>Aventura & RPG</h3></div></label>
+              </li>
               <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" >Show3</label>
-                  <ul class="nav-menu-deployed">
-                    <li><a href="#" class="nav-menu-deployed">Link 5</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 6</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 7</a></li>
-                    <li><a href="#" class="nav-menu-deployed">Link 8</a></li>
-                  </ul></li>
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Clasicos.svg" alt="Clasicos button"></div><h3>Clasicos</h3></div></label>
+              </li>
+              <li><input id="check-menu-deployed" type="checkbox">
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Deportes.svg" alt="Deportes & Carreras button"></div><h3>Deportes & Carreras</h3></div></label>
+              </li>
+              <li><input id="check-menu-deployed" type="checkbox">
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Estrategia.svg" alt="Estrategia & Defensa button"></div><h3>Estrategia & Defensa</h3></div></label>
+              </li>
+              <li><input id="check-menu-deployed" type="checkbox">
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div></label>
+              </li>
+              <li><input id="check-menu-deployed" type="checkbox">
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Novedades.svg" alt="Novedades button"></div><h3>Novedades</h3></div></label>
+              </li>
             </ul>
         </nav>  
         <nav class="usr-nav">
