--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -67,16 +67,19 @@
           </nav>
       </section> 
     </header>
-    <div class="contenedor"> <!-- usar el tag main en vez del div generico -->
-      <section class="novedades">
-        <div class="titulo-novedades"><h1>Proximamente en WASD Games</h1></div>
-          <div class="contenedor-card-preview">
-              <div class="img-preview"><img src="./img/img-games/JuegoHero1.png" alt="Batalla por el medio oeste, preview"></div>
-              <div class="titulo-preview"><h2>Batalla por el medio oeste</h2></div>
-              <div class="cuerpo-preview">Pelea con los mas odiados del condado, elige tus armas y preparate para la batalla.</div>
-              <div class="button-preview"><button>Preview</button></div>
+    <section class="contenedor-novedades">
+      <div class="titulo-novedades"><h1>Proximamente en WASD Games</h1></div>
+      <div class="contenedor-card-preview">
+          <div class="img-preview"><img src="./img/img-games/JuegoHero1.png" alt="Batalla por el medio oeste, preview"></div>
+          <div class="contenedor-texto-preview">
+            <div class="titulo-preview"><h2>Batalla por el medio oeste</h2></div>
+            <div class="cuerpo-preview"><p>Pelea con los mas odiados del condado, elige tus armas y preparate para la batalla.</p></div>
+            <div class="button-preview"><button>Preview</button></div>
           </div>
-      </section>
+      </div>
+    </section>
+    <div class="contenedor"> <!-- usar el tag main en vez del div generico -->
+      
       <section class="carruseles-categorias-recomendado" id="contenedor-categoria" name="recomendado"> <!-- el id se repite, si lo usamos mas de una vez, que sea clase -->
         <div class="carrusel-categorias "> <!-- este div me parece que sobra -->
           <div class="contenedor-titulo-controles">
