--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -19,7 +19,13 @@
               <img src="./img/icons/Img-Logo.svg" alt="logo WASD games" class="logo">
             </div>          
             <input type="checkbox" id="check">
-            <label for="check" class="bar-btn"><span class="material-symbols-outlined">menu</span></label>
+            <label for="check" class="bar-btn">
+              <div id="nav-icon-left" class="nav-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </label>
             <ul class="nav-menu">
               <li><input id="check-menu-deployed" type="checkbox">
                 <label for="check-menu-deployed"><div class="categoria"><div class="icon"><img src="./img/icons/Icon-Home.svg" alt="home button"></div><h3>Home</h3></div></label>
@@ -59,7 +65,12 @@
         </nav>  
         <nav class="usr-nav">
               <input type="checkbox" id="checkUsr">
-              <label for="checkUsr" class="usr-btn"><span class="material-symbols-outlined">menu</span></label>
+              <label for="checkUsr" class="usr-btn">
+                <div id="nav-icon-right" class="nav-icon">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div></label>
                 <ul class="nav-menu-usr">
                   <li><a href="#">Link 1</href></a></li>
                   <li><a href="#">Link 2</href></a></li>
