Se incorpora boton animado preview hero

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -74,8 +74,8 @@
           <div class="img-preview"><img src="./img/img-games/JuegoHero1.png" alt="Batalla por el medio oeste, preview"></div>
           <div class="contenedor-texto-preview">
             <div class="titulo-preview"><h2>Batalla por el medio oeste</h2></div>
-            <div class="cuerpo-preview"><p>Pelea con los mas odiados del condado, elige tus armas y preparate para la batalla.</p></div>
-            <div class="button-preview"><button>Preview</button></div>
+            <div class="cuerpo-preview"><h3>Pelea con los mas odiados del condado, elige tus armas y preparate para la batalla.</h3></div>
+            <div class="button-preview"><button class="btn">Preview</button></div>
           </div>
       </div>
     </section>
