Se modifica JS de carrusel y menu para que queden separados, se acomodan espaciados

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -96,7 +96,7 @@
         <section class="carruseles-categorias-recomendado" id="contenedor-categoria" name="recomendado"> <!-- el id se repite, si lo usamos mas de una vez, que sea clase -->
           <div class="carrusel-categorias "> <!-- este div me parece que sobra -->
             <div class="contenedor-titulo-controles">
-              <h3>Recomendados</h3>
+              <h3>Recomendados para ti</h3>
               <div class="indicadores-recomendado"></div>
             </div>
             <div class="contenedor-principal" id="recomendado">
@@ -609,7 +609,7 @@
             </div>
           </div>
         </section>
-        <section class="carruseles-categorias-deportes" id="contenedor-categoria" name="deporte">
+        <section class="carruseles-categorias-deportes" id="contenedor-categoria" name="deportes">
           <div class="carrusel-categorias">
             <div class="contenedor-titulo-controles">
               <h3>Deportes y carreras</h3>
@@ -829,7 +829,8 @@
             </div>
           </div>
         </div>
-    </footer>
+    </footer>    
+    <script src="./js/burgermenu.js"></script> 
     <script src="./js/movimientoCarrusel.js"></script>    
 </body>
 </html>
