--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -70,13 +70,17 @@
                   <span></span>
                   <span></span>
                   <span></span>
-                </div></label>
-                <ul class="nav-menu-usr">
-                  <li><a href="#">Link 1</href></a></li>
-                  <li><a href="#">Link 2</href></a></li>
-                  <li><a href="#">Link 3</href></a></li>
-                  <li><a href="#">Link 4</href></a></li>
-                </ul>
+                </div>
+                <div class="nav-menu-usr">
+                  <div class="avatar-img"><img src="./img/img-games/Img-ProfileMain.png" alt="User avatar image"></div>
+                  <ul>
+                    <li><a href="#">Perfil</href></a></li>
+                    <li><a href="#">Biblioteca</href></a></li>
+                    <li><a href="#">Amigos</href></a></li>
+                  </ul>
+                  <div class="button-small-primary"><button role="button">Logout</button></div>
+                </div>
+              </label>
           </nav>
       </section> 
     </header>
