--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -80,6 +80,23 @@
           </nav>
       </section> 
     </header>
+    <div class="loader">
+      <div class="wrapper">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="shadow"></div>
+        <div class="shadow"></div>
+        <div class="shadow"></div>
+        <div class="shadow"></div>
+        <div class="progress">
+          <div class="progress-bar">
+              <span class="progress-bar-text"></span>
+          </div>
+        </div>
+      </div>      
+    </div>
       <section class="contenedor-novedades">
         <div class="titulo-novedades"><h1>Proximamente en WASD Games</h1></div>
         <div class="contenedor-card-preview">
@@ -830,6 +847,8 @@
           </div>
         </div>
     </footer>    
+    <!--script src="./js/scrolltop.js"></script-->
+    <script src="./js/loader.js"></script>
     <script src="./js/burgermenu.js"></script> 
     <script src="./js/movimientoCarrusel.js"></script>    
 </body>
