--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -274,7 +274,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                       </div>
@@ -287,7 +287,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -300,7 +300,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -313,7 +313,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -352,7 +352,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -365,7 +365,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -378,7 +378,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -391,7 +391,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
                                 <div class="titulo-small-card"><h3>Dan Man</h3></div>
                                 <div class="contenido-small-card"><p>Salta y da patadas por doquier.</p></div>
                                 <div class="precio-small-card"><h2>$ 2300</h2></div>
-                                <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div>
+                                <!-- <div class="btn-comprar-small-card"><button class="button comprar" role="button">Comprar</button></div> -->
                             </div>
                         </div>
                     </div>
