Se trabaja en pagina hero

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -97,7 +97,7 @@
       <section class="contenedor-novedades">
         <div class="titulo-novedades"><h1>Proximamente en WASD Games</h1></div>
         <div class="contenedor-card-preview">
-            <div class="img-preview"><img src="./img/img-games/JuegoHero1.png" alt="Batalla por el medio oeste, preview"></div>
+            <div class="img-preview"><img src="./img/img-games/hero-section/JuegoHero1.png" alt="Batalla por el medio oeste, preview"></div>
             <div class="contenedor-texto-preview">
               <div class="titulo-preview"><h2>Batalla por el medio oeste</h2></div>
               <div class="cuerpo-preview"><h3>Pelea con los mas odiados del condado, elige tus armas y preparate para la batalla.</h3></div>
@@ -105,7 +105,7 @@
             </div>
         </div>
       </section>
-      <div class="contenedor"> <!-- usar el tag main en vez del div generico -->        
+      <div class="main"> <!-- usar el tag main en vez del div generico -->        
         <section class="carruseles-categorias-recomendado contenedor-categoria" id="recomendado"> 
           <div class="carrusel-categorias "> 
             <div class="contenedor-titulo-controles">
@@ -535,7 +535,7 @@
                           <div class="datos-juego-small">
                               <div class="titulo-small-card"><h3>PUBG</h3></div>
                               <div class="contenido-small-card"><p>Utiliza tus armas, se el mejor.</p></div>
-                              <div class="precio-small-card"><h2>$ 150</h2></div>
+                              <div class="precio-small-card"><h2>Agregado</h2></div>
                           </div>
                           <div class="back-btn"></div>
                       </div>
