pagina 2 seccion comunidad

--- a/Entregable2/Connect_4.html
+++ b/Entregable2/Connect_4.html
@@ -27,12 +27,12 @@
 			</ul>
 		</nav>
 		<div class="game-window">
-			<div><img src="./img/img-games/Game-running.svg" alt="Ventana del juego"></div>
+			<div><img src="./img/img-games/img-imperio/Game-running.svg" alt="Ventana del juego"></div>
 			<ul>
 				<li><img src="./img/icons/Img-Logo.svg" alt="WASD Games"></li>
 				<li><h3>El Imperio y las cuatro estrellas de la muerte</h3></li>
 				<li>
-					<img src="./img/Game-running-icons.svg" alt="">
+					<img src="./img/img-games/img-imperio/Game-running-icons.svg" alt="">
 				</li>
 			</ul>
 		</div>
@@ -43,20 +43,48 @@
 		<section>
 			<h3>Game preview</h3>
 			<ul>
-				<li><img src="./img/Game-preview-video.svg" alt=""></li>
-				<li><img src="./img/Game-preview-img1.svg" alt=""></li>
-				<li><img src="./img/Game-preview-img2.svg" alt=""></li>
+				<li><img src="./img/img-games/img-imperio/Game-preview-video.svg" alt=""></li>
+				<li><img src="./img/img-games/img-imperio/Game-preview-img1.svg" alt=""></li>
+				<li><img src="./img/img-games/img-imperio/Game-preview-img2.svg" alt=""></li>
 			</ul>
 		</section>
 		<section>
 			<h3>¿Como se juega?</h3>
 			<ul>
-				<li><img src="./img/Game-help-img1.svg" alt=""></li>
-				<li><img src="./img/Game-help-img2.svg" alt=""></li>
-				<li><img src="./img/Game-help-img3.svg" alt=""></li>
+				<li><img src="./img/img-games/img-imperio/Game-help-img1.svg" alt=""></li>
+				<li><img src="./img/img-games/img-imperio/Game-help-img2.svg" alt=""></li>
+				<li><img src="./img/img-games/img-imperio/Game-help-img3.svg" alt=""></li>
 			</ul>
 		</section>
-		<section>comunidad</section>
+		<section class="comunidad">
+			<h3>Comentarios</h3>
+			<div class="review">
+				<div class="comment-user">
+					<div class="comment-avatar"><img src="./img/img-games/img-imperio/Avatar1.svg" alt=""></div>
+					<h3>ManuJota</h3>
+					<p>@Manito39</p>
+				</div>
+				<div class="comment-comment">
+					<div class="rating">
+						<div>
+							<span class="material-symbols-outlined filled">star</span>
+							<span class="material-symbols-outlined filled">star</span>
+							<span class="material-symbols-outlined filled">star</span>
+							<span class="material-symbols-outlined filled">star</span>
+							<span class="material-symbols-outlined">star</span>
+						</div>
+						<span>hace 1 semana</span>
+					</div>
+					<p>El juego es simple de entender y esta muy bueno. lo mejor es que podes pasarle el link a tu amigo y empezas a jugar re facil</p>
+					<div class="comment-review">
+						<span>¿Te resulto util?</span>
+						<div class="thumbs"><span class="material-symbols-outlined filled">thumb_up</span><span>14</span></div>
+						<div class="thumbs"><span class="material-symbols-outlined filled">thumb_down</span><span>3</span></div>
+						<div></div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section>juegos similares</section>
 	</main>
 	<footer></footer>
