pagina 2 enviar comentario

--- a/Entregable2/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable2/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -122,6 +122,29 @@
 				<li><img src="../img/img-games/img-imperio/Game-help-img3.svg" alt=""></li>
 			</ul>
 		</section>
+        <section class="comunidad">
+            <h3>¿Que opinas del juego?</h3>
+            <div class="review send-review">
+				<div class="comment-user">
+					<div class="comment-avatar"><img src="../img/img-games/Img-ProfileMain.png" alt=""></div>
+					<h3>Mauro</h3>
+					<p>@mauritoloco</p>
+				</div>
+				<div class="comment-comment">
+                    <textarea name="" id="" cols="30" rows="5"></textarea>
+					<div class="rating">
+						<div>
+							<span class="material-symbols-outlined">star</span>
+							<span class="material-symbols-outlined">star</span>
+							<span class="material-symbols-outlined">star</span>
+							<span class="material-symbols-outlined">star</span>
+							<span class="material-symbols-outlined">star</span>
+						</div>
+						<div class="button-comment"><button class="btn-enviar"><h3>Enviar</h3></button></div>
+					</div>
+				</div>
+			</div>
+        </section>
 		<section class="comunidad">
 			<h3>Comentarios</h3>
 			<div class="review">
