Se reparan links a paginas y a algunas imagenes de juegos

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -180,7 +180,7 @@
                     <div class="contenedor-card-big">        
                       <div class="card-big">
                           <div></div>
-                          <div class="img-juego-big" id="AmogUs2.jpg"><img src="./img/img-games/img-cards-big/AmogUs2.jpg" alt="Among Us 2."></div>
+                          <div class="img-juego-big" id="AmongUs2.jpg"><img src="./img/img-games/img-cards-big/AmogUs2.jpg" alt="Among Us 2."></div>
                           <div class="datos-juego-big">
                               <div class="titulo-big-card"><h2>Among us 2</h2></div>                
                               <div class="contenido-big-card"><p>Descubre quien es el traidor o ganara. Juega partidas en linea no tus amigos.</p></div>
@@ -222,7 +222,7 @@
                     <div class="contenedor-card-big">        
                       <div class="card-big">
                           <div></div>
-                          <div class="img-juego-big" id="Island-Life-Gameplay-cover.webp"><img src="./img//img-games/img-cards-big/Island-Life-Gameplay-cover.webp" alt="Island life 2."></div>
+                          <div class="img-juego-big" id="IslandLife 2.png"><img src="./img//img-games/img-cards-big/Island-Life-Gameplay-cover.webp" alt="Island life 2."></div>
                           <div class="datos-juego-big">
                               <div class="titulo-big-card"><h2>Island life 2</h2></div>                
                               <div class="contenido-big-card"><p>Prueba la vida en la isla, te gustara. Varios modos de juego online.</p></div>
@@ -236,7 +236,7 @@
                     <div class="contenedor-card-big">        
                       <div class="card-big">
                           <div></div>
-                          <div class="img-juego-big" id="plants-vs-zombies-2-9220.jpg"><img src="./img/img-games/img-cards-big/plants-vs-zombies-2-9220.jpg" alt="Plantas vs zombies 2."></div>
+                          <div class="img-juego-big" id="PlantsVsZombies.png"><img src="./img/img-games/img-cards-big/plants-vs-zombies-2-9220.jpg" alt="Plantas vs zombies 2."></div>
                           <div class="datos-juego-big">
                               <div class="titulo-big-card"><h2>Plantas vs Zombies 2</h2></div>                
                               <div class="contenido-big-card"><p>La lucha en el jardin esta cada vez mas reñida. Los Zombies son mas de los que esperabas.</p></div>
