--- a/Entregable2/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable2/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -27,7 +27,7 @@
             </label>
             <ul class="nav-menu">
               <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed"><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><h3>Home</h3></div></label>
+                <label for="check-menu-deployed"><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Home.svg" alt="home button"></div><a href="/index.html"><h3>Home</h3></a></div></label>
               </li>
               <li><input id="check-menu-deployed" type="checkbox">
                 <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Accion.svg" alt="Accion button"></div><h3>Accion</h3></div></label>
@@ -48,7 +48,7 @@
                 <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Multiplayer.svg" alt="Multijugador button"></div><h3>Multijugador</h3></div></label>
               </li>
               <li><input id="check-menu-deployed" type="checkbox">
-                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Novedades.svg" alt="Novedades button"></div><h3>Novedades</h3></div></label>
+                <label for="check-menu-deployed" ><div class="categoria"><div class="icon"><img src="../img/icons/Icon-Novedades.svg" alt="Novedades button"></div><a href="./batalla-por-el-medio-oeste.html"><h3>Novedades</h3></a></div></label>
               </li>
             </ul>
         </nav>  
@@ -81,7 +81,7 @@
 	<main>
 		<nav class="breadcrumbs">
 			<ul>
-				<li>Home</li>
+				<li><a href="/index.html">Home</a></li>
 				<span class="material-symbols-outlined">
 					chevron_right
 				</span>
