Se modifica canvas a 1100x440

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -91,7 +91,7 @@
 			</ul>
 		</nav>
 		<div class="game-window">
-			<canvas canvas="canvas" width="1100" height="768" ></canvas>
+			<canvas id="canvas" width="1100" height="400" ></canvas>
 			<ul>
 				<li><img src="../img/icons/Img-Logo.svg" alt="WASD Games"></li>
 				<li><h3>El Imperio y las cuatro estrellas de la muerte</h3></li>
