Cambios en style.css para mobile

--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -250,7 +250,7 @@
             </div>
           </div>
         </section>
-        <section class="carruseles-categorias-jugado contenedor-categoria" id="jugado">
+        <section class="carruseles-categorias-jugado contenedor-categoria contenedor-small-cards-mobile" id="jugado">
           <div class="carrusel-categorias ">
             <div class="contenedor-titulo-controles">
               <h3>Ultimos jugados</h3>
@@ -377,7 +377,7 @@
             </div>
           </div>
         </section>
-        <section class="carruseles-categorias-accion contenedor-categoria" id="accion">
+        <section class="carruseles-categorias-accion contenedor-categoria contenedor-small-cards-mobile" id="accion">
             <div class="carrusel-categorias ">
               <div class="contenedor-titulo-controles">
                 <h3>Accion</h3>
@@ -561,7 +561,7 @@
               </div>
             </div>
         </section>
-        <section class="carruseles-categorias-multijugador contenedor-categoria" id="multijugador">
+        <section class="carruseles-categorias-multijugador contenedor-categoria contenedor-small-cards-mobile" id="multijugador">
           <div class="carrusel-categorias ">
             <div class="contenedor-titulo-controles">
               <h3>Multijugador</h3>
@@ -745,7 +745,7 @@
             </div>
           </div>
         </section>
-        <section class="carruseles-categorias-deportes contenedor-categoria" id="deportes">
+        <section class="carruseles-categorias-deportes contenedor-categoria contenedor-small-cards-mobile" id="deportes">
           <div class="carrusel-categorias">
             <div class="contenedor-titulo-controles">
               <h3>Deportes y carreras</h3>
