Se agrega codigo de loader en pag de juego

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -12,6 +12,23 @@
 </head>
 <body>
 	<header class="header">
+	<div class="loader">
+		<div class="wrapper">
+			<div class="circle"></div>
+			<div class="circle"></div>
+			<div class="circle"></div>
+			<div class="circle"></div>
+			<div class="shadow"></div>
+			<div class="shadow"></div>
+			<div class="shadow"></div>
+			<div class="shadow"></div>
+			<div class="progress">
+			<div class="progress-bar">
+				<span class="progress-bar-text"></span>
+			</div>
+			</div>
+		</div>      
+	</div>
       <section class="container-nav-bar">
         <nav class="bar-nav">     
             <div class="img-logo">
@@ -79,7 +96,7 @@
 	<main>
 		<nav class="breadcrumbs">
 			<ul>
-				<li><a href="/index.html">Home</a></li>
+				<li><a href="../index.html">Home</a></li>
 				<span class="material-symbols-outlined">
 					chevron_right
 				</span>
@@ -273,7 +290,7 @@
     </footer> 
 	<script src="../js/loader.js"></script>
     <script src="../js/burgermenu.js"></script> 
-    <script src="../js/movimientoCarrusel.js"></script>     
-    <script src="../js/scrolltop.js"></script>
+    <script src="../js/movimientoCarrusel.js"></script>
+    <script src="../js/modalCompra.js"></script> 
 </body>
 </html>
