logica de tablero

--- a/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
+++ b/Entregable3/pages/las-cuatro-estrellas-de-la-muerte.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<header class="header">
-	<div class="loader">
+	<!-- <div class="loader">
 		<div class="wrapper">
 			<div class="circle"></div>
 			<div class="circle"></div>
@@ -28,7 +28,7 @@
 			</div>
 			</div>
 		</div>      
-	</div>
+	</div> -->
       <section class="container-nav-bar">
         <nav class="bar-nav">     
             <div class="img-logo">
@@ -288,9 +288,10 @@
           </div>
         </div>
     </footer> 
-	<script src="../js/loader.js"></script>
+	<!-- <script src="../js/loader.js"></script> -->
     <script src="../js/burgermenu.js"></script> 
     <script src="../js/movimientoCarrusel.js"></script>
     <script src="../js/modalCompra.js"></script> 
+    <script src="../js/game/Tablero.js"></script> 
 </body>
 </html>
